force-app/main/default/objects/modigie__Modigie__c/modigie__Modigie__c.object-meta.xml
<CustomObject>
    <description>Custom object to allow Modigie / Zapier / Citrix integration.</description>
    <label>Modigie</label>
    <nameField>
        <displayFormat>MDG-{000000}</displayFormat>
        <label>Modigie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modigie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>