force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Best_Time_Thursday__c.field-meta.xml
<CustomField>
    <fullName>modigie__Best_Time_Thursday__c</fullName>
    <label>Best Time To Call Thursday</label>
    <length>50</length>
    <type>Text</type>
</CustomField>