force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Best_Time_to_Call_Alternate_Number1__c.field-meta.xml
<CustomField>
    <fullName>modigie__Best_Time_to_Call_Alternate_Number1__c</fullName>
    <label>Overall Best Time to Call Alt 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>