force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Carrier_Name_Mobile__c.field-meta.xml
<CustomField>
    <fullName>modigie__Carrier_Name_Mobile__c</fullName>
    <label>Mobile Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>