force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Company_Name_Matches_Records_Get_Modigie__c.field-meta.xml
<CustomField>
    <fullName>modigie__Company_Name_Matches_Records_Get_Modigie__c</fullName>
    <label>Company Name Matches Record(Get Modigie)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>