force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Current_Title_Get_Modigie__c.field-meta.xml
<CustomField>
    <fullName>modigie__Current_Title_Get_Modigie__c</fullName>
    <label>Current Title Get Modigie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>