force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Formatted_Other_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>modigie__Formatted_Other_Phone_Number__c</fullName>
    <label>Formatted Other Phone Number</label>
    <type>Phone</type>
</CustomField>