force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Get_Phone_Intelligence_Job_Id_Alternate1__c.field-meta.xml
<CustomField>
    <fullName>modigie__Get_Phone_Intelligence_Job_Id_Alternate1__c</fullName>
    <label>Get Phone Insights Alt 1 Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>