force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Get_Phone_Intelligence_Job_Status_ValNum__c.field-meta.xml
<CustomField>
    <fullName>modigie__Get_Phone_Intelligence_Job_Status_ValNum__c</fullName>
    <label>Get Phone Insights Val Number Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>