force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Line_Activity_Phone__c.field-meta.xml
<CustomField>
    <fullName>modigie__Line_Activity_Phone__c</fullName>
    <label>Line Activity Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>