force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Linkedin_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>modigie__Linkedin_Job_Id__c</fullName>
    <label>Get LinkedIn Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>