force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Modigie_Mobile_Phone_DNC__c.field-meta.xml
<CustomField>
    <fullName>modigie__Modigie_Mobile_Phone_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modigie Mobile Phone - DNC</label>
    <type>Checkbox</type>
</CustomField>