force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>modigie__Parent_Id__c</fullName>
    <label>Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>