force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Phone_Insights_User_Locale_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>modigie__Phone_Insights_User_Locale_Other_Phone__c</fullName>
    <label>Phone Insights User Locale Other Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>