force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Phone_Intelligence_Status_Alt_Number1__c.field-meta.xml
<CustomField>
    <fullName>modigie__Phone_Intelligence_Status_Alt_Number1__c</fullName>
    <defaultValue>&quot;Not started&quot;</defaultValue>
    <label>Get Phone Insights Alt 1 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>