force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Phone_Type_Alternate_Number1__c.field-meta.xml
<CustomField>
    <fullName>modigie__Phone_Type_Alternate_Number1__c</fullName>
    <label>Alt 1 Number Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>