force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Phone_Type_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>modigie__Phone_Type_Other_Phone__c</fullName>
    <label>Other Phone Number Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>