force-app/main/default/objects/modigie__Modigie__c/fields/modigie__User_VerifyEmployer__c.field-meta.xml
<CustomField>
    <fullName>modigie__User_VerifyEmployer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verify Employer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Modigie6</relationshipName>
    <type>Lookup</type>
</CustomField>