force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Validate_Employer_Job_Source__c.field-meta.xml
<CustomField>
    <fullName>modigie__Validate_Employer_Job_Source__c</fullName>
    <label>Validate Employer Job Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>