force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Validation_Key__c.field-meta.xml
<CustomField>
    <fullName>modigie__Validation_Key__c</fullName>
    <label>Validation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>