force-app/main/default/objects/modigie__Modigie__c/fields/modigie__Verified_Phone_Get_Phone_Insights_ValNum__c.field-meta.xml
<CustomField>
    <fullName>modigie__Verified_Phone_Get_Phone_Insights_ValNum__c</fullName>
    <label>Validated Modigie Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>