force-app/main/default/objects/modigie__Modigie__c/listViews/modigie__All.listView-meta.xml
<ListView>
    <fullName>modigie__All</fullName>
    <columns>NAME</columns>
    <columns>modigie__Lead__c</columns>
    <columns>modigie__Contact__c</columns>
    <columns>modigie__Is_Contact_Track__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>modigie__Modigie_Validated_Mobile_Contact_Number__c</columns>
    <columns>modigie__Status__c</columns>
    <columns>modigie__Mobile_2__c</columns>
    <columns>modigie__Mobile_3__c</columns>
    <columns>modigie__Line_Activity__c</columns>
    <columns>modigie__Employment_Ends_Verify_Employer__c</columns>
    <columns>modigie__Get_Phone_Intelligence_Job_Id__c</columns>
    <columns>modigie__Employment_Ends_Get_Modigie__c</columns>
    <columns>modigie__Company_Name_Matches_Public_Records__c</columns>
    <columns>modigie__Company_Name_Matches_Records_Get_Modigie__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>